<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="@dimen/paddinf_pantalla"
android:orientation="horizontal"
android:background="@mipmap/ic_launcher_foreground"
tools:context=".Pantalla_Inicial">

<Space
    android:layout_width="1dp"
    android:layout_height="match_parent"
    android:layout_weight="0.5" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">
    <TextView
        style="@style/titulo"
        android:text="@string/app_name" />
    <Button
        android:id="@+id/unjug"
        android:text="@string/un_jugador"
        style="@style/boton"
        />

    <RadioGroup
        android:id="@+id/dificultad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/facil"
            style="@style/radio"
            android:text="@string/facil" />

        <RadioButton
            android:id="@+id/normal"
            style="@style/radio"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/imposible"
            style="@style/radio"
            android:text="@string/imposible" />
    </RadioGroup>
    <Button
        android:id="@+id/dosjug"
        android:text="@string/dos_jugador"
        style="@style/boton"/>
</LinearLayout>

<Space
    android:layout_width="10dp"
    android:layout_height="match_parent"
    android:layout_weight="0.5" />

</LinearLayout>